objects/ssot__LoyaltyMembershipLifecycle__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CommentText__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalIdentifier__c</fullName>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Membership Lifecycle Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramMemberId__c</fullName>
        <label>Loyalty Program Member</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MembershipStatus__c</fullName>
        <label>Membership Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MembershipType__c</fullName>
        <label>Membership Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OrderItemId__c</fullName>
        <label>Order Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729227487895_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyMembershipLifecycle_OrderItem_rel</label>
        <referenceTo>ssot__SalesOrderProduct__dlm</referenceTo>
        <relationshipLabel>LoyaltyMembershipLifecycle_OrderItem_rel</relationshipLabel>
        <relationshipName>rel_1729227487895_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729832102561_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyMembershipLifecycle_LoyaltyPr_rel</label>
        <referenceTo>ssot__LoyaltyProgramMember__dlm</referenceTo>
        <relationshipLabel>LoyaltyMembershipLifecycle_LoyaltyPr_rel</relationshipLabel>
        <relationshipName>rel_1729832102561_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>